feat: create ticket
