# src/docs/swagger.json
@@ -246,6 +246,40 @@
                         "schema": {}
                     }
                 }
+            },
+            "post": {
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
+                "tags": [
+                    "Trouble Tickets"
+                ],
+                "summary": "Create a trouble ticket",
+                "parameters": [
+                    {
+                        "description": "Create New Ticket info",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.CreateTroubleTicketDTO"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.TroubleTicketDTO"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {}
+                    }
+                }
             }
         },
         "/troubleTickets/filters": {
@@ -367,6 +401,26 @@
                 },
                 "name": {
                     "type": "string"
+                }
+            }
+        },
+        "models.CreateTroubleTicketDTO": {
+            "type": "object",
+            "properties": {
+                "channel_id": {
+                    "type": "integer"
+                },
+                "description": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "requested_resolution_date": {
+                    "type": "string"
+                },
+                "type_id": {
+                    "type": "integer"
                 }
             }
         },
